--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-image: url(../img/background.jpg);
+  background-image: url(./img/background.jpg);
   background-attachment: fixed;
   background-size: cover;
   padding: 30px;
